<resources>
    <string name="app_name">강남대 Lite</string>
    <string name="sample_title">글제목 어쩌구저쩌구</string>
    <string name="sample_time">2000/12/07</string>
    <string name="sample_type">타입</string>
    <string name="sample_views">999</string>
    <string name="sample_num">721</string>
    <string name="sample_file">첨부 파일</string>
    <string name="sample_belong">소프트웨어응용학부</string>
    <string name="sample_name">홍길동</string>
    <string name="sample_phone_number">010–1234–5678</string>
    <string name="sample_locate">연구실[홍길동]-(이000)</string>
    <string name="sample_email">yoonki1207@gmail.com</string>
    <string name="developer_email">피드백 이메일 : yoonki1207@gmail.com</string>
    <string name="app_version">1.0.3 beta</string>
    <string name="fragment_setting_alarm_on_off">알람</string>
    <string name="channel_name">Channel name</string>
    <string name="channel_description">Channel Description</string>
    <string name="msg_token_fmt">msg token fmt</string>
    <string name="string_search_result">검색 결과</string>
    <string name="string_copy_phone_number">전화번호 복사</string>
    <string name="string_copy_email">이메일 복사</string>
    <string name="string_close">닫기</string>
    <string name="string_title_address_result">정보 복사하기</string>
    <string name="string_search_title">교내 전화번호 검색</string>
    <string name="string_search_btn">검색</string>
    <string name="string_search_description">목록 짧게 터치 : 전화번호 혹은 이메일 복사하기\n목록 길게 터치 : 전화번호 다이얼 바로가기</string>
    <string name="string_search_hint">성명/부서명을 입력해주세요</string>
    <string name="string_calender_previous">이전 달</string>
    <string name="string_calender_next">다음 달</string>
    <string name="developer_msg"></string>

    <string name="string_login">로그인</string>
    <string name="string_logout">로그아웃</string>

    <string name="string_nav_header_title">로그인이 필요합니다.</string>
    <string name="string_nav_header_subtitle">로그인이 필요합니다.</string>
</resources>
