<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorBackgroundNoticeDark">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_title_address_result"
        android:textSize="25sp"
        android:textAlignment="center"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorLine"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/copy_address_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_copy_phone_number"
            android:textSize="15sp"
            android:padding="10dp"
            android:background="@color/colorBackgroundNoticeDark"
            android:textAlignment="textStart"
            android:textColor="@color/colorWhite"/>
        <Button
            android:id="@+id/copy_address_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_copy_email"
            android:textSize="15sp"
            android:padding="10dp"
            android:background="@color/colorBackgroundNoticeDark"
            android:textAlignment="textStart"
            android:textColor="@color/colorWhite"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLine"/>
        <Button
            android:id="@+id/address_result_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackgroundNoticeDark"
            android:text="@string/string_close"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"/>
    </LinearLayout>

</LinearLayout>