<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    tools:ignore="RtlSymmetry"
    android:background="?attr/selectableItemBackground"
    tools:context="com.tistory.hyomyo.kangnamuniversityapp.MainActivity">
    <!--    소속  성명 전화번호 위치 이메일-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/address_first_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/address_belong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/sample_belong"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="?attr/textColor">

        </TextView>

        <TextView
            android:id="@+id/address_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/sample_name"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/address_belong"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="?attr/textColor"/>

        <TextView
            android:id="@+id/address_locate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/sample_locate"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/address_name"
            app:layout_constraintStart_toStartOf="@id/address_belong"
            android:paddingBottom="10dp"
            android:textColor="?attr/textColor"/>

        <View
            android:id="@+id/address_bar2"
            android:layout_width="1dp"
            android:layout_height="20sp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="1dp"
            android:background="?attr/metaTextColor"
            app:layout_constraintTop_toBottomOf="@id/address_name"
            app:layout_constraintStart_toEndOf="@id/address_locate" />

        <TextView
            android:id="@+id/address_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/sample_email"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/address_name"
            app:layout_constraintStart_toEndOf="@id/address_bar2"
            android:textColor="?attr/textColor"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/metaTextColor"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>